@startuml
!pragma layout elk
skinparam classAttributeIconSize 0
skinparam shadowing false
title distributed_relay_chat — UML диаграмма классов

package "Пакеты и обработка" {
  abstract class Package {
    +type: str
    +to_json(): str
    +from_json(json_str)
  }
  class Message {
    +chat: str
    +sender: str
    +text: str
    +message_id: int?
    +timestamp: datetime?
    +set_timestamp_now(): Message
  }
  class TimestampResponse {
    +chat: str
    +message_id: int
    +timestamp: datetime
    +from_message(msg: Message): TimestampResponse
  }
  class SystemMessage {
    +msg_type: str
    +body: str
  }
  abstract class PackageHandler {
    +on_msg(msg): awaitable
    +on_tsr(tsr): awaitable
    +on_sys_msg(sys_msg): awaitable
  }
  class PackageFactory {
    -_handlers: dict
    +get_handler_and_instance(json_str)
    +process_json(json_str): awaitable
  }
  class ActivePackageHandler {
    +username: str
    +send_username(): awaitable
    +set_username(name): awaitable
  }

  Package <|-- Message
  Package <|-- TimestampResponse
  Package <|-- SystemMessage
  PackageHandler <|-- ActivePackageHandler
  ActivePackageHandler *-- PackageFactory
  PackageFactory ..> PackageHandler
}

package "Сеть и сервер" {
  class ConnectionHandler {
    +ws
    +package_factory: PackageFactory
    +connect(ip, port): str
    +run(): str
    +send_message(msg): awaitable
    +send_tsr(tsr): awaitable
    +send_sys_message(sys_msg): awaitable
    +disconnect(): awaitable
    +is_connected(): bool
  }
  class Server {
    +active_connections: set
    +on_connection_callback
    +handler_factory(ws): awaitable
    +run(): awaitable
  }
  Server ..> ConnectionHandler : creates
  ConnectionHandler o-- PackageFactory
}

package "Релей и диспетчер" {
  class Relay {
    -server: Server
    -dispatcher: Dispatcher
    -proxy_dispatcher: ProxyDispatcher
    -bot: RelayBot
    +run(): awaitable
    +start_handler(connection_handler): awaitable
  }
  enum DispatchCode
  class DispatchResult {
    +ok: bool
    +code: DispatchCode
    +params: str?
    +format_error(): str
  }
  interface DispatcherInterface
  class Dispatcher {
    +channels: dict
    +users_funs: dict
    +users_channels: dict
  }
  class Channel {
    +name: str
    +members: set
    +send_message(sender_code, msg): awaitable
    +subscribe(user_code): awaitable
    +unsubscribe(user_code): awaitable
  }
  enum UserRole
  enum PermissionAction
  class AccessRule {
    +allowed_roles: frozenset
  }
  class ProxyDispatcher {
    +user_roles: dict
    +moderator_code: str?
    +rules: dict
  }
  class ClientHandler {
    +dispatcher: DispatcherInterface
    +bot: RelayBot
    +user_code: str
    +run(): awaitable
    +on_msg(msg): awaitable
    +on_sys_msg(sys_msg): awaitable
  }
  class RelayBot

  DispatchResult --> DispatchCode
  DispatcherInterface <|.. Dispatcher
  DispatcherInterface <|.. ProxyDispatcher
  Dispatcher *-- Channel
  ProxyDispatcher *-- AccessRule
  ProxyDispatcher --> DispatcherInterface : wraps
  AccessRule --> UserRole
  ProxyDispatcher --> PermissionAction
  ClientHandler --|> ActivePackageHandler
  ClientHandler --> DispatcherInterface
  ClientHandler *-- RelayBot
  Relay *-- Server
  Relay *-- Dispatcher
  Relay *-- ProxyDispatcher
  Relay *-- RelayBot
  Relay ..> ClientHandler : creates
}

package "Клиент, чаты, команды, UI" {
  abstract class Chat {
    +name: str
    +messages: list
    +add_message(msg): awaitable
    +send_message(msg): awaitable
  }
  class RemoteChat {
    +messages_wait_for_sync: dict
    +messages_sync_count: int
    +on_tsr(tsr): void
  }
  class ChatBot {
    +add_commands(commands): void
  }
  class Bot {
    +chat_name: str
    +bot_name: str
    +command_router: CommandRouter
    +async_send_text(text): awaitable
    +async_on_text(text): awaitable
  }
  class FuncArgsPair {
    +function
    +kwargs: dict
  }
  class CommandRouter {
    +commands_dict: dict
    +add_command(command, function, args): void
    +async_route(text): awaitable
  }
  class Client {
    +run_loop
    +start_connection_thread(ip, port): awaitable
    +run_net(ip, port): awaitable
    +disconnect(): awaitable
  }
  class ClientChatBot
  class UserClient {
    +chats: dict
    +create_chat(chat_name): void
    +on_msg(msg): awaitable
    +on_tsr(tsr): awaitable
    +send_user_text(chat, text): void
  }
  class APPClient {
    +on_message_callback
    +on_chat_added_callback
    +on_chat_removed_callback
  }
  class TUI_Adapter
  class APP

  Chat <|-- RemoteChat
  Chat <|-- ChatBot
  ChatBot *-- Bot
  Bot *-- CommandRouter
  CommandRouter *-- FuncArgsPair
  Bot <|-- RelayBot
  ChatBot <|-- ClientChatBot

  Client --|> ActivePackageHandler
  UserClient --|> Client
  APPClient --|> UserClient
  RemoteChat --> ConnectionHandler
  UserClient *-- ClientChatBot
  UserClient *-- Chat
  APP *-- APPClient
  APP *-- TUI_Adapter
  TUI_Adapter --> UserClient
}

note right of PackageFactory
  Template Method:
  process_json = parse type
  -> build package
  -> call handler
end note

note right of ProxyDispatcher
  Decorator/Proxy:
  wraps Dispatcher and adds
  access control and roles
end note

note bottom of CommandRouter
  Command pattern:
  text command -> function + args
end note

note bottom of UserClient
  Observer:
  callbacks in APPClient notify TUI
end note

@enduml
